crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@62.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select unnest(textmultirange(textrange('\\\\\\\\', repeat('a', 200)), textrange('c', 'd')));"
---
SelectStmt@0..88
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..84
    FuncCall@7..84
      Ident@7..13 "unnest"
      Ascii40@13..14 "("
      FuncCall@14..84
        Ident@14..28 "textmultirange"
        Ascii40@28..29 "("
        FuncCall@29..62
          Ident@29..38 "textrange"
          Ascii40@38..39 "("
          AConst@39..45
            Sconst@39..45 "'\\\\\\\\'"
          Ascii44@45..46 ","
          Whitespace@46..47 " "
          FuncCall@47..62
            Ident@47..53 "repeat"
            Ascii40@53..54 "("
            AConst@54..57
              Sconst@54..57 "'a'"
            Ascii44@57..58 ","
            Whitespace@58..59 " "
            AConst@59..62
              Iconst@59..62 "200"
        Ascii41@62..63 ")"
        Ascii41@63..64 ")"
        Ascii44@64..65 ","
        Whitespace@65..66 " "
        FuncCall@66..84
          Ident@66..75 "textrange"
          Ascii40@75..76 "("
          AConst@76..79
            Sconst@76..79 "'c'"
          Ascii44@79..80 ","
          Whitespace@80..81 " "
          AConst@81..84
            Sconst@81..84 "'d'"
  Ascii41@84..85 ")"
  Ascii41@85..86 ")"
  Ascii41@86..87 ")"
  Ascii59@87..88 ";"

