crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@65.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO nummultirange_test VALUES('{}');"
---
InsertStmt@0..44
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..30
    Ident@12..30 "nummultirange_test"
  Whitespace@30..31 " "
  SelectStmt@31..42
    Values@31..37 "VALUES"
    Ascii40@37..38 "("
    List@38..42
      AConst@38..42
        Sconst@38..42 "'{}'"
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

