crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@66.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO nummultirange_test VALUES('{[,)}');"
---
InsertStmt@0..47
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..30
    Ident@12..30 "nummultirange_test"
  Whitespace@30..31 " "
  SelectStmt@31..45
    Values@31..37 "VALUES"
    Ascii40@37..38 "("
    List@38..45
      AConst@38..45
        Sconst@38..45 "'{[,)}'"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

