crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@67.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO nummultirange_test VALUES('{[3,]}');"
---
InsertStmt@0..48
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..30
    Ident@12..30 "nummultirange_test"
  Whitespace@30..31 " "
  SelectStmt@31..46
    Values@31..37 "VALUES"
    Ascii40@37..38 "("
    List@38..46
      AConst@38..46
        Sconst@38..46 "'{[3,]}'"
  Ascii41@46..47 ")"
  Ascii59@47..48 ";"

