crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@68.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO nummultirange_test VALUES('{[,), [3,]}');"
---
InsertStmt@0..53
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..30
    Ident@12..30 "nummultirange_test"
  Whitespace@30..31 " "
  SelectStmt@31..51
    Values@31..37 "VALUES"
    Ascii40@37..38 "("
    List@38..51
      AConst@38..51
        Sconst@38..51 "'{[,), [3,]}'"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

