crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@7.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{[a,z) - }'::textmultirange;"
---
SelectStmt@0..36
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..35
    TypeCast@7..35
      AConst@7..19
        Sconst@7..19 "'{[a,z) - }'"
      Typecast@19..21 "::"
      TypeName@21..35
        Ident@21..35 "textmultirange"
  Ascii59@35..36 ";"

