crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@70.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: INSERT INTO nummultirange_test VALUES(nummultirange());
---
InsertStmt@0..55
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..30
    Ident@12..30 "nummultirange_test"
  Whitespace@30..31 " "
  SelectStmt@31..51
    Values@31..37 "VALUES"
    Ascii40@37..38 "("
    List@38..51
      FuncCall@38..51
        Ident@38..51 "nummultirange"
  Ascii40@51..52 "("
  Ascii41@52..53 ")"
  Ascii41@53..54 ")"
  Ascii59@54..55 ";"

